disable http server

--- a/package/freifunk-bielefeld/Makefile
+++ b/package/freifunk-bielefeld/Makefile
@@ -14,8 +14,7 @@ define Package/freifunk-bielefeld-basic
 	DEFAULT:=y
 	TITLE:= Freifunk-Bielefeld Basic
 	URL:=http://freifunk-bielefeld.de
-	DEPENDS:=+kmod-batman-adv +batctl +alfred +sockread\
-		+uhttpd +haserl +uhttpd-mod-tls +px5g \
+	DEPENDS:=+kmod-batman-adv +batctl +alfred\
 		+fastd +ip +odhcpd +dnsmasq-dhcpv6 \
 		+ebtables +kmod-ebtables-ipv4 +kmod-ebtables-ipv6 \
 		+haveged +autoupdater +simple-tc +@ATH_USER_REGD
