--- a/.config
+++ b/.config
@@ -1,3 +1,15 @@
 #OpenWrt does not allow to de-select packages
 #in our Makefile, so it needs to be done here (for dnsmasq-dhcpv6).
 CONFIG_PACKAGE_dnsmasq=n
+CONFIG_PACKAGE_ppp=n
+CONFIG_PACKAGE_kmod-usb-ohci=n
+CONFIG_PACKAGE_kmod-usb2=n
+CONFIG_PACKAGE_kmod-usb-core=n
+CONFIG_PACKAGE_ALFRED_VIS=n
+CONFIG_PACKAGE_MAC80211_MESH=n
+CONFIG_PACKAGE_odhcpd=n
+CONFIG_PACKAGE_opkg=n
+CONFIG_STRIP_KERNEL_EXPORTS=y
+CONFIG_USE_MKLIBS=y
+CONFIG_BUSYBOX_CUSTOM=y
+CONFIG_BUSYBOX_CONFIG_NTPD=n
