updated build instructions

--- a/.config
+++ b/.config
@@ -1,5 +1,31 @@
-#OpenWrt does not allow to de-select packages
-#in our Makefile, so it needs to be done here (for dnsmasq-dhcpv6).
+# Select the right target before running make defconfig
+# CONFIG_TARGET_ppc40x is not set
+# CONFIG_TARGET_realview is not set
+# CONFIG_TARGET_atheros is not set
+# CONFIG_TARGET_ar71xx is not set
+# CONFIG_TARGET_at91 is not set
+# CONFIG_TARGET_avr32 is not set
+# CONFIG_TARGET_brcm2708 is not set
+# CONFIG_TARGET_brcm47xx is not set
+# CONFIG_TARGET_brcm63xx is not set
+# CONFIG_TARGET_cns21xx is not set
+# CONFIG_TARGET_cns3xxx is not set
+# CONFIG_TARGET_octeon is not set
+# CONFIG_TARGET_mpc85xx is not set
+# CONFIG_TARGET_imx6 is not set
+# CONFIG_TARGET_xburst is not set
+# CONFIG_TARGET_ixp4xx is not set
+# CONFIG_TARGET_lantiq is not set
+# CONFIG_TARGET_malta is not set
+# CONFIG_TARGET_kirkwood is not set
+# CONFIG_TARGET_orion is not set
+# CONFIG_TARGET_rb532 is not set
+# CONFIG_TARGET_au1000 is not set
+# CONFIG_TARGET_ramips is not set
+# CONFIG_TARGET_ar7 is not set
+# CONFIG_TARGET_uml is not set
+# CONFIG_TARGET_x86 is not set
+
 CONFIG_PACKAGE_dnsmasq=n
 CONFIG_PACKAGE_ppp=n
 CONFIG_PACKAGE_kmod-usb-ohci=n
