--- a/package/freifunk/Makefile
+++ b/package/freifunk/Makefile
@@ -14,11 +14,7 @@ define Package/freifunk-basic
 	DEFAULT:=y
 	TITLE:= Freifunk-Bielefeld Basic
 	URL:=http://freifunk-bielefeld.de
-	DEPENDS:=+kmod-batman-adv +alfred +sockread\
-		+uhttpd +haserl +uhttpd-mod-tls +px5g \
-		+fastd +ip +odhcpd +simple-radvd \
-		+ebtables +kmod-ebtables-ipv4 +kmod-ebtables-ipv6 \
-		+haveged +autoupdater +simple-tc +@ATH_USER_REGD
+	DEPENDS:=+kmod-batman-adv +alfred +ip +@ATH_USER_REGD
 endef
 
 define Build/Prepare
