--- a/package/freifunk/Makefile
+++ b/package/freifunk/Makefile
@@ -12,8 +12,8 @@ define Package/freifunk-basic
 	SECTION:=base
 	CATEGORY:=Freifunk
 	DEFAULT:=y
-	TITLE:= Freifunk-Bielefeld Basic
-	URL:=http://freifunk-bielefeld.de
+	TITLE:= Freifunk-Bodensee Basic
+	URL:=http://ffbsee.de
 	DEPENDS:=+kmod-batman-adv +alfred +sockread\
 		+uhttpd +haserl +uhttpd-mod-tls +px5g \
 		+fastd +ip +odhcpd +simple-radvd \
