--- a/package/freifunk/Makefile
+++ b/package/freifunk/Makefile
@@ -12,11 +12,11 @@ define Package/freifunk-basic
 	SECTION:=base
 	CATEGORY:=Freifunk
 	DEFAULT:=y
-	TITLE:= Freifunk-Bodensee Basic
-	URL:=http://ffbsee.de
-	DEPENDS:=+kmod-batman-adv +alfred +sockread\
-		+uhttpd +haserl +uhttpd-mod-tls +px5g \
-		+fastd +ip +odhcpd +simple-radvd \
+	TITLE:= Freifunk-Bielefeld Basic
+	URL:=http://freifunk-bielefeld.de
+	DEPENDS:=+kmod-batman-adv +alfred +sockread \
+		+uhttpd +haserl +px5g +libustream-mbedtls \
+		+fastd +ip +odhcpd +simple-radvd +@SMALL_FLASH \
 		+ebtables +kmod-ebtables-ipv4 +kmod-ebtables-ipv6 \
 		+haveged +autoupdater +simple-tc +@ATH_USER_REGD
 endef
